--- a/backend/distributed-computed-api-server/package.json
+++ b/backend/distributed-computed-api-server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
@@ -14,8 +15,8 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build" : "npx tsc",
-    "start" : "node dist/index.js",
-    "dev" : "npx concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "npx concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   }
 }
