--- a/worker/package.json
+++ b/worker/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "@types/node-fetch": "^2.6.2",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.19",
     "typescript": "^4.8.3"
